# review-radar

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py
backend/app/api/: routes.py
backend/app/services/: UNUSED_fake_review_detector.py  fake_review_classifier.py  fake_review_detector.py  open_api_controller.py  scraper.py  test_classifier.py
backend/models/: rewrite.py
backend/training/: Model_final.ipynb  analyzer_training.py  retrain.ipynb
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: header.tsx  histogram.tsx  pie-chart.tsx  review-card.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/pages/: Home.tsx
